--- a/src/index.html
+++ b/src/index.html
@@ -364,6 +364,22 @@
         </div>
     </section>
 
+
+    <footer class="footer">
+        <!-- <div class="footer__map"></div> -->
+        <!-- <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A7ae2070f32b24093bf42a83d67b51480e99e879b739f18b4751341a2307d6cf9&amp;source=constructor" width="100%" height="630" frameborder="0"></iframe> -->
+        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A7ae2070f32b24093bf42a83d67b51480e99e879b739f18b4751341a2307d6cf9&amp;width=100%25&amp;height=630&amp;lang=ru_RU&amp;scroll=true"></script>
+        <div class="footer__info">
+            <address class="footer__adr">Москва, Мясницкий проезд, д.3с1</address>
+            <a class="footer__phone" href="tel:+74999228974">8 (499) 922-89-74</a>
+            <div class="footer__social">
+                <a href="#" class="footer__social-item"><img src="icons/facebook.svg" alt="facebook"></a>
+                <a href="#" class="footer__social-item"><img src="icons/instagram.svg" alt="instagram"></a>
+                <a href="#" class="footer__social-item"><img src="icons/pinterest.svg" alt="pinterest"></a>
+            </div>
+        </div>
+    </footer>
+
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="js/slick.js"></script>
