добавил описание к каждой секции

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    <section class="promo">
+    <section class="promo"> <!-- начальная секция -->
         <div class="container">
             <header class="header">
                 <a href="#" class="header__logo">
@@ -55,7 +55,7 @@
             </div>
         </div>
     </section>
-    <section class="advantages">
+    <section class="advantages"> <!-- ПРЕИМУЩЕСТВА -->
         <div class="container">
             <div class="title">НАШИ ПРЕИМУЩЕСТВА</div>
             <div class="advantages__wrapper">
@@ -77,7 +77,7 @@
             </div>
         </div>
     </section>
-    <section class="consultation">
+    <section class="consultation"> <!-- форма -->
         <div class="container">
             <h2 class="title title_left">
                 Получите бесплатную консультацию по подбору пульсометра 
@@ -97,7 +97,7 @@
         </div>
     </section>
 
-    <section class="carousel">
+    <section class="carousel"> <!-- карусель -->
         <div class="container">
             <div class="carousel__inner">
                 <div>
@@ -112,7 +112,7 @@
             </div>
         </div>
     </section>
-    <section class="catalog">
+    <section class="catalog"> <!-- каталог -->
         <div class="container">
             <h2 class="title">Каталог пульсометров</h2>
             <ul class="catalog__tabs">
@@ -363,7 +363,7 @@
             </div>
         </div>
     </section>
-    <section class="feed">
+    <section class="feed"> <!-- отзывы -->
         <div class="container">
             <h2 class="title">отзывы клиентов</h2>
             <div class="feed__item">
