--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pulse</title>
-    <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
-    <link rel="stylesheet" href="css/font.css">
-    <link rel="stylesheet" type="text/css" href="css/slick.css"/>
-    <link rel="stylesheet" href="css/animate.css"/>
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -367,7 +363,7 @@
     <section class="feed"> <!-- отзывы -->
         <div class="container">
             <h2 class="title">отзывы клиентов</h2>
-            <div class="feed__item animate__animated animate__fadeInUp wow data-wow-duration="2s" ">
+            <div class="feed__item animate__animated animate__fadeInUp wow data-wow-duration='2s'">
                 <img src="img/feed_1.png" alt="Ирина Иванченко" class="feed__img">
                 <div class="feed__text">
                     <div class="feed__subtitle">Ирина Иванченко</div>
@@ -381,7 +377,7 @@
                     </div>
                 </div>
             </div>
-            <div class="feed__item animate__animated animate__fadeInUp wow data-wow-duration="2s" ">
+            <div class="feed__item animate__animated animate__fadeInUp wow data-wow-duration='2s'">
                 <img src="img/feed_2.png" alt="Иван Сёмочкин" class="feed__img">
                 <div class="feed__text">
                     <div class="feed__subtitle">Иван Сёмочкин</div>
@@ -393,7 +389,7 @@
                     </div>
                 </div>
             </div>
-            <div class="feed__item animate__animated animate__fadeInUp wow data-wow-duration="2s" ">
+            <div class="feed__item animate__animated animate__fadeInUp wow data-wow-duration='2s'">
                 <img src="img/feed_3.png" alt="Юлия Дашкина" class="feed__img">
                 <div class="feed__text">
                     <div class="feed__subtitle">Юлия Дашкина</div>
@@ -411,9 +407,7 @@
 
 
     <footer class="footer">
-        <!-- <div class="footer__map"></div> -->
-        <!-- <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A7ae2070f32b24093bf42a83d67b51480e99e879b739f18b4751341a2307d6cf9&amp;source=constructor" width="100%" height="630" frameborder="0"></iframe> -->
-        <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A7ae2070f32b24093bf42a83d67b51480e99e879b739f18b4751341a2307d6cf9&amp;width=100%25&amp;height=630&amp;lang=ru_RU&amp;scroll=false"></script>
+        <script charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A7ae2070f32b24093bf42a83d67b51480e99e879b739f18b4751341a2307d6cf9&amp;width=100%25&amp;height=630&amp;lang=ru_RU&amp;scroll=false"></script>
         <div class="footer__info">
             <address class="footer__adr">Москва, Мясницкий проезд, д.3с1</address>
             <a class="footer__phone" href="tel:+74999228974">8 (499) 922-89-74</a>
@@ -465,12 +459,12 @@
         <img src="icons/up.svg" alt="up">
     </a>
 
-    <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="js/slick.js"></script>
-    <script type="text/javascript" src="js/jquery.validate.min.js"></script>
-    <script type="text/javascript" src="js/jquery.maskedinput.min.js"></script>
-    <script type="text/javascript" src="js/wow.min.js"></script>
-    <script type="text/javascript" src="js/script.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="js/slick.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
+    <script src="js/jquery.maskedinput.min.js"></script>
+    <script src="js/wow.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
